# teamy-rust-windows-utils

./: CHANGELOG.md  Cargo.toml  README.md  check-all.ps1  install.ps1  run.ps1  test.ps1
.github/instructions/: prohibit-searching-windows-types.instructions.md  windows-handles-auto-drop.instructions.md
cli/: Cargo.toml
cli/src/: main.rs
examples/tray-console-demo/: Cargo.toml
examples/tray-console-demo/src/: main.rs  window_proc.rs
examples/tray-demo/: Cargo.toml  make-icon.ps1
examples/tray-demo/src/: main.rs  window_proc.rs  window_user_data.rs
src/: lib.rs  main.rs  mod.rs
src/audio/: audio_input_device_list_request.rs  audio_recording.rs  imm_device.rs  imm_device_icon.rs  imm_device_icon_path.rs  imm_device_id.rs  microphone_service.rs  mod.rs
src/cli/: global_args.rs  json_log_behaviour.rs  main.rs  mod.rs  to_args.rs  tracing.rs
src/cli/command/: mod.rs
src/cli/command/clipboard/: mod.rs  set.rs  show.rs
src/cli/command/daemon/: daemon_cli.rs  mod.rs  run.rs  start.rs  status.rs  stop.rs
src/cli/command/explorer/: mod.rs  show.rs
src/cli/command/explorer/context_menu/: mod.rs
src/cli/command/explorer/context_menu/entry/: list.rs  mod.rs
src/cli/command/icon/: icon_cli.rs  mod.rs
src/cli/command/icon/browse/: gui.rs  icon_browse_cli.rs  mod.rs
src/cli/command/mic/: mic_cli.rs  mod.rs
src/cli/command/mic/list/: mic_list_cli.rs  mod.rs
src/cli/command/mic/record/: mic_record_cli.rs  mod.rs
src/cli/command/window/: focus.rs  list.rs  mod.rs  open.rs  pick.rs
src/clipboard/: clipboard_format_ext.rs  clipboard_guard.rs  clipboard_io.rs  mod.rs
src/com/: com_guard.rs  mod.rs
src/console/: ansi_support.rs  attach_to_console.rs  attach_to_existing.rs  check_inheriting.rs  create.rs  ctrl_c_handler.rs  ctrl_handler.rs  detach.rs  handles.rs  hide.rs  init.rs  mod.rs
src/daemon/: mod.rs
src/elevation/: admin_child.rs  backup_privilege.rs  elevated_child_process.rs  ensure_elevated.rs  is_elevated.rs  mod.rs  relaunch_as_admin.rs  run_as_admin.rs
src/event_loop/: message_loop.rs  mod.rs
src/explorer/: context_menu.rs  mod.rs
src/file/: mod.rs  onedrive.rs  read.rs  watch.rs
src/handle/: auto_closing_handle.rs  drive_handle.rs  mod.rs
src/hicon/: application_icon.rs  embedded_resource.rs  hicon_to_image.rs  load_icon_from_path.rs  mod.rs
src/invocation/: mod.rs  same_invocation.rs  same_invocation_same_console.rs  to_args.rs
src/job/: mod.rs  run_as_job.rs
src/log/: buffer_sink.rs  hook.rs  mod.rs
src/module/: mod.rs
src/network/: mod.rs  network_adapter_extensions.rs  network_adapters.rs  network_interface_id.rs  network_interface_monitor.rs  operstatus_extensions.rs
src/paths/: app_home.rs  cache.rs  mod.rs
src/services/: fs_service.rs  mic_service.rs  mod.rs  runtime.rs  teamy_path.rs
src/shell/: context_menu.rs  mod.rs  path_extensions.rs  pidl.rs  property_store.rs  select.rs
src/storage/: drive_letter_pattern.rs  mod.rs  onedrive.rs  read.rs  watch.rs
src/string/: easy_pcwstr.rs  mod.rs  pcwstr_guard.rs  utf8.rs
src/tray/: add.rs  create.rs  delete.rs  mod.rs  taskbar_created.rs
src/window/: create_window_for_tray.rs  enumerate.rs  focus.rs  mod.rs  open.rs  window_user_data.rs
tests/: cli_fuzzing.rs
