[workspace]
members = ["examples/*"]

[workspace.lints.clippy]
multiple_unsafe_ops_per_block = "deny"

[workspace.package]
authors = ["TeamDman"]
description = "A collection of my Rust utilities for interacting with Windows."
repository = "https://github.com/TeamDman/teamy-rust-windows-utils.git"
version = "0.2.0"
license = "MPL-2.0"
edition = "2024"

[workspace.dependencies]
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
widestring = "1.2.0"
chrono = "0.4"
arbitrary = { version = "1.4.1", features = ["derive"] }
windows = { version = "0.62.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_WNet",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Storage",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com_Urlmon",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_Mmc",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Controls",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI",
] }
color-eyre = "0.6.5"
bevy_log = "0.16.1"


[package]
name = "teamy-windows"
description.workspace = true
authors.workspace=true
repository.workspace=true
version.workspace=true
license.workspace=true
edition.workspace=true

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
cli = ["dep:clap", "dep:color-eyre", "dep:chrono", "dep:arbitrary", "dep:tracing-subscriber"]
tracing-subscriber = ["dep:tracing-subscriber"]

[dependencies]
eyre.workspace=true
tracing.workspace=true
widestring.workspace=true
windows.workspace=true
tracing-subscriber= { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
arbitrary = { workspace = true, optional = true }
crossbeam-channel = "0.5.15"
uom = { version = "0.37.0", features = ["usize"] } # "u64", "autoconvert", 
clap = { version = "4.5", features = ["derive"], optional = true }
color-eyre = { workspace = true, optional = true }
serde_json = { version = "1.0.145", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
