[package]
name = "teamy-windows-cli"
version = "0.2.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for teamy-windows"

[[bin]]
name = "teamy-windows"
path = "src/main.rs"

[dependencies]
teamy-windows = { path = "..", features = ["cli", "serde"] }
eyre.workspace = true
color-eyre.workspace = true
clap = { version = "4.5", features = ["derive"] }
windows.workspace = true
